added ui + database